--- a/style.css
+++ b/style.css
@@ -7,19 +7,117 @@ body {
     display: flex;
 }
 
-form label {
-    display: block;
-}
-
+/* header */
 .top {
-    height: 100vh;
-    width: 600px;
+    width: fit-content;
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
 }
 
-.top img {
-    background-repeat: no-repeat;
+img {
     background-size: cover;
-    position: relative;
-    width: 600px;
-    height: inherit;
+    background-repeat: no-repeat;
+    height: 100%;
 }
+
+.hero {
+    position: absolute;
+    top: 14rem;
+    width: 600px;
+    background-color: rgba(0,0,0,.5);
+}
+
+.hero img {
+    width: 100px;
+    height: auto;
+    position: relative;
+    top: 6.5rem;
+    left: 6rem;
+}
+
+.top h1 {
+    text-align: center;
+    color: #e6007e;
+    padding: 2.5rem;
+}
+/* Main container*/
+.contain {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    background: linear-gradient(180deg,rgb(185, 185, 185),rgba(10,10,10,.7));
+}
+
+ .top-main {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 2.5rem;
+ }
+
+/* form */
+
+form {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 4rem;
+}
+
+.contain-form {
+    display: flex;
+    gap: 4rem;
+}
+
+.left-side,.right-side {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    gap: 10px;
+    letter-spacing: 3px;
+}
+
+input {
+    border-radius: 5px;
+}
+
+form button {
+    width: 10rem;
+    padding: 1rem;
+    border-radius: 10px;
+    background-color: #e6007e;
+}
+
+/* bottom */
+
+.bottom-main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+a[href^="#"] {
+    text-decoration: none;
+    color: #e6007e;
+}
+
+
+/* @media screen and (max-width:900px) {
+    body{
+        flex-direction: column;
+        width: 600px;
+        margin: auto;
+    }
+    
+    img {
+        height: 500px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: auto;
+
+    }
+} */
