--- a/style.css
+++ b/style.css
@@ -39,12 +39,13 @@ img {
     width: 100px;
     height: auto;
     position: absolute;
-    left: 6.5rem;
+    left: 6rem;
 }
 
 .top h1 {
     text-align: center;
-    color: #e6007e;
+    color: rgba(255,165,0,.7);
+    text-transform: uppercase;
     padding: 2.5rem;
 }
 
@@ -58,21 +59,17 @@ img {
 a[href^="https"] {
     color: rgba(50, 50, 50, .7);
 }
-/* Main container*/
-.contain {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
-    background: linear-gradient(180deg,rgb(185, 185, 185),rgba(10,10,10,.7));
+a[href^="https"]:hover {
+    color: rgba(255,165,0,.5);
 }
 
+/* Main container*/
  .top-main {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
     gap: 2.5rem;
+    margin-bottom: 1rem;
  }
 
 /* form */
@@ -80,13 +77,32 @@ a[href^="https"] {
 form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 2rem;
-    gap: 4rem;
+    gap: 3.5rem;
+    background: linear-gradient(180deg,silver,black);
+}
+
+form p {
+    font-size: 1.5rem;
 }
 
 .contain-form {
     display: flex;
     gap: 4rem;
+    padding-bottom: 1rem;
+    position: relative;
+}
+
+.left-side {
+    position: relative;
+}
+
+.left-side::before {
+    content: "Lets do this!";
+    position: absolute;
+    top: -2.7rem;
+    font-size: 1.5rem;
 }
 
 .left-side,.right-side {
@@ -106,7 +122,10 @@ form button {
     width: 10rem;
     padding: 1rem;
     border-radius: 10px;
-    background-color: #e6007e;
+    /* border: 1px solid #fff; */
+    border-color: #fff;
+    border-color: rgba(255,165,0,.5);
+    background:  rgba(255,165,0,.5);
 }
 
 /* bottom */
@@ -119,12 +138,22 @@ form button {
 
 a[href^="#"] {
     text-decoration: none;
-    color: #e6007e;
+    color:rgba(255,165,0,.5);
 }
 
-input:valid {
-    border: 1px solid rgba(0,200,0,.8);
-    background-color: rgba(0,180,0,.3);;
+/* validation */
+input:required:focus:valid {
+    border: 2px green solid;
+    background: url(./images/tick-circle-svgrepo-com.svg) no-repeat 95% 50% rgba(0,100,0,.6);
+    background-size: 25px;
+    border-color: green;
+}
+
+input:required:focus:invalid {
+    border: 2px red solid;
+    border-color: red;
+    background: url(./images/alert-hexagon-svgrepo-com.svg) no-repeat 95% 50% rgba(150,0,0,.6);
+    background-size: 25px;
 }
 
 /* @media screen and (max-width:900px) {
